# Rush

./: .clippy.toml  .llvm-cov.toml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yaml
benchmarks/: Cargo.toml
benchmarks/benches/: core_benchmarks.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: http_client.rs  lib.rs
crates/core/tests/: integration_test.rs
scripts/: coverage.sh  setup-hooks.sh
src/: main.rs
tests/: integration_test.rs
