[package]
name = "rush"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }


[dev-dependencies]
tokio-test = "0.4"
httpmock = "0.6"
serde_json = "1.0"

